Sun Jan 20 12:38:28 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Framework_Component_Test.dsp: New dsp file for the test. 
	* tests/tests.dsw: Added the above test to the workspace.

Sun Jan 20 12:25:28 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Framework_Component.h: Removed the definition of the
	  default constructor (in ACE_UNIMPLEMENTED_FUNC definition). The
	  other private constructor with a default argument tends towards
	  a default constructor and VC++ signals a multiple definition
	  error. Not sure how g++ didnt signal this one. 
	
	* ace/Framework_Component_T.h: #include'd Framework_Component.h 
	* ace/Framework_Component_T.cpp: Added a #ifndef around the file. 

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp: Added the Framwork_Component* files to the
	  project file. 
	
Sun Jan 20 10:40:28 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/Vector_Test.dsp:
	* tests/tests.dsw: Added a new project for Vector_Test.

Sun Jan 20 16:25:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/Makefile.bor:
          Added new Framework_Component

        * tests/Makefile.bor:
          Added new Framework_Component_Test

Sun Jan 20 00:00:30 2002 UTC  Don Hinton  <dhinton@ieee.org>

	* ace/Vector_T.cpp (dump): Commented out the contents of this
	  function for the time being.  It assumed that the element
	  was an object with a dump() method, which won't always be
	  the case.

	* tests/Vector_Test.cpp: Changed a few data types from signed
	  to unsigned, size_t, to get rid of compiler warnings.

Sat Jan 19 17:29:50 2002  Douglas C. Schmidt  <schmidt@siesta.cs.wustl.edu>

	* ace/Vector_T.cpp (dump): Fixed problems with this method.  Thanks
	  to Don Hinton for reporting this.

	* tests/Vector_Test.cpp: Changed the typedef of DATA from int to
	  size_t to avoid "type mismatch" compiler warnings.  Thanks to
 	  Don Hinton for reporting this.

Sat Jan 19 22:30:26 UTC 2002  Don Hinton  <dhinton@ieee.org>
