@@ -1,3 +1,8 @@
+2002-01-20  Oliver Kellogg  <oliver.kellogg@sysde.eads.net>
+
+	* bin/subst_env.pl: New script to ease the transition to the
+	  TAO_ENV_ARG macros defined in TAO/tao/orbconf.h.
+
 Sun Jan 20 12:38:28 2002  Balachandran Natarajan  <bala@cs.wustl.edu>
 
 	* tests/Framework_Component_Test.dsp: New dsp file for the test. 
